--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ license = "MIT"
 python = ">=3.7"
 fastapi = "^0.81.0"
 uvicorn = "^0.18.3"
+Markdown = "^3.4.1"
+textile = "^4.0.2"
+docutils = "^0.19"
 
 [tool.poetry.dev-dependencies]
 
